// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: Button > Snapshot > Default 1`] = `
<DocumentFragment>
  <button
    class="relative rounded-lg bg-gray-300 px-4 py-2 text-sm text-gray-800 transition-colors hover:bg-gray-200 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-900"
    type="button"
  >
    <p>
      Button
    </p>
    <div
      class="absolute inset-0 items-center justify-center text-[1em] hidden"
    >
      <div
        class="inline-block aspect-square h-[1em] w-[1em] animate-spin rounded-full border-[0.2em] border-current border-r-transparent border-t-transparent animation-duration-[600ms]"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`Component: Button > Snapshot > Disabled 1`] = `
<DocumentFragment>
  <button
    class="relative rounded-lg bg-gray-300 px-4 py-2 text-sm text-gray-800 transition-colors hover:bg-gray-200 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-900 pointer-events-none opacity-70"
    type="button"
  >
    <p>
      Button
    </p>
    <div
      class="absolute inset-0 items-center justify-center text-[1em] hidden"
    >
      <div
        class="inline-block aspect-square h-[1em] w-[1em] animate-spin rounded-full border-[0.2em] border-current border-r-transparent border-t-transparent animation-duration-[600ms]"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`Component: Button > Snapshot > Loading 1`] = `
<DocumentFragment>
  <button
    class="relative rounded-lg bg-gray-300 px-4 py-2 text-sm text-gray-800 transition-colors hover:bg-gray-200 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-900 pointer-events-none opacity-90"
    type="button"
  >
    <p
      class="opacity-0"
    >
      Button
    </p>
    <div
      class="absolute inset-0 flex items-center justify-center text-[1em]"
    >
      <div
        class="inline-block aspect-square h-[1em] w-[1em] animate-spin rounded-full border-[0.2em] border-current border-r-transparent border-t-transparent animation-duration-[600ms]"
      />
    </div>
  </button>
</DocumentFragment>
`;
